# ROS_Workshop

./: .gitignore  README.md  main.py  pyproject.toml
YoloExamples/: annotate_images.py  object_detection.py  train_custom_model.py  yolo_training_workflow.ipynb
YoloExamples/annotate/: app.py
YoloExamples/annotate/templates/: annotate.html  base.html  help.html  home.html
YoloExamples/helmet_detection_dataset/labels/: annotation_meta.json  happy-asian-man-showing-key-260nw-2380489987.txt
controllers/my_controller_robot/: my_controller_robot.py
data/robot/: status.json
docs/: 00_installation_and_get_started.md  01_what_is_udp.md  02_what_is_ros2.md  03_project_overview.md  04_build_and_run.md  05_how_each_program_works.md  06_keyboard_led_control.md  07_yolo_ultralytics.md  08_annotating_and_training.md
p1/p1/: p1.ino
p2/p2/: p2.ino
p3/p3/: p3.ino
p4/p4/: p4.ino
p5/p5/: p5.ino
p6/p6/: p6.ino
p7/: camera_test.py  drowsiness_udp.py  finger_udp.py  udp_client.py
p7/p7/: p7.ino
ros2_keyboar_led_control/install/: local_setup.sh  setup.sh
ros2_keyboar_led_control/log/: latest_build
ros2_keyboar_led_control/src/keyboard_node/: setup.cfg  setup.py
ros2_keyboar_led_control/src/keyboard_node/keyboard_node/: keyboard_input_node.py  status_display_node.py
ros2_my_own_ws/install/: local_setup.sh  setup.sh
ros2_my_own_ws/log/: latest_build
ros2_my_own_ws/src/udp_led_bridge/: package.xml  setup.cfg  setup.py
webot_model/: .MCP-test.wbproj  arrow_controlled_robot.py  simple_robot.wbt
(+16 files in other folders)
